[gd_scene load_steps=8 format=3 uid="uid://qe1usdxm7835"]

[ext_resource type="Script" path="res://scenes/ui/main_menu.gd" id="1_4o88a"]
[ext_resource type="Texture2D" uid="uid://d1arfcbqtrsrs" path="res://assets/textures/menu_background.png" id="2_6d6vn"]
[ext_resource type="StyleBox" uid="uid://d2cvvq2tgimvd" path="res://assets/styles/main_menu_button.tres" id="3_51ent"]
[ext_resource type="StyleBox" uid="uid://dkldklw6dth8q" path="res://assets/styles/menu_button_hover.tres" id="3_qr46t"]
[ext_resource type="AudioStream" uid="uid://dlxf27x7m7xut" path="res://assets/audio/musics/this-minimal-technology-pure-12327.mp3" id="5_req0w"]
[ext_resource type="StyleBox" uid="uid://bm8kk2b6bomhn" path="res://assets/styles/title_and_logo.tres" id="6_6unib"]
[ext_resource type="Texture2D" uid="uid://cmor57dwpse7f" path="res://icon.svg" id="6_gpv6n"]

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_4o88a")

[node name="TextureRect" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_6d6vn")
expand_mode = 2

[node name="Menu" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -380.0
offset_top = -124.0
offset_right = -229.0
offset_bottom = 124.0
grow_horizontal = 0
grow_vertical = 2
theme_override_constants/separation = 20
alignment = 1

[node name="ButtonContinue" type="Button" parent="Menu"]
custom_minimum_size = Vector2(280, 52)
layout_mode = 2
theme_override_styles/normal = ExtResource("3_51ent")
theme_override_styles/hover = ExtResource("3_qr46t")
theme_override_styles/pressed = ExtResource("3_qr46t")
theme_override_styles/disabled = ExtResource("3_51ent")
theme_override_styles/focus = ExtResource("3_51ent")
text = "Continue"
alignment = 2

[node name="ButtonNew" type="Button" parent="Menu"]
custom_minimum_size = Vector2(280, 52)
layout_mode = 2
theme_override_styles/normal = ExtResource("3_51ent")
theme_override_styles/hover = ExtResource("3_qr46t")
theme_override_styles/pressed = ExtResource("3_qr46t")
theme_override_styles/disabled = ExtResource("3_51ent")
theme_override_styles/focus = ExtResource("3_51ent")
text = "New game"
alignment = 2

[node name="ButtonSettings" type="Button" parent="Menu"]
custom_minimum_size = Vector2(280, 52)
layout_mode = 2
theme_override_styles/normal = ExtResource("3_51ent")
theme_override_styles/hover = ExtResource("3_qr46t")
theme_override_styles/pressed = ExtResource("3_qr46t")
theme_override_styles/disabled = ExtResource("3_51ent")
theme_override_styles/focus = ExtResource("3_51ent")
text = "Settings"
alignment = 2

[node name="ButtonController" type="Button" parent="Menu"]
custom_minimum_size = Vector2(280, 52)
layout_mode = 2
theme_override_styles/normal = ExtResource("3_51ent")
theme_override_styles/hover = ExtResource("3_qr46t")
theme_override_styles/pressed = ExtResource("3_qr46t")
theme_override_styles/disabled = ExtResource("3_51ent")
theme_override_styles/focus = ExtResource("3_51ent")
text = "Controls"
alignment = 2

[node name="ButtonQuit" type="Button" parent="Menu"]
custom_minimum_size = Vector2(280, 52)
layout_mode = 2
theme_override_styles/normal = ExtResource("3_51ent")
theme_override_styles/hover = ExtResource("3_qr46t")
theme_override_styles/pressed = ExtResource("3_qr46t")
theme_override_styles/disabled = ExtResource("3_51ent")
theme_override_styles/focus = ExtResource("3_51ent")
text = "Quit"
alignment = 2

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("5_req0w")
volume_db = -10.0
autoplay = true
bus = &"Music"

[node name="Panel" type="Panel" parent="."]
custom_minimum_size = Vector2(128, 128)
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -85.0
offset_top = 20.0
offset_right = 85.0
offset_bottom = 166.0
grow_horizontal = 2
theme_override_styles/panel = ExtResource("6_6unib")

[node name="TextureRect2" type="TextureRect" parent="Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("6_gpv6n")

[connection signal="resized" from="." to="." method="_on_resized"]
[connection signal="focus_entered" from="Menu/ButtonContinue" to="." method="_on_button_continue_focus_entered"]
[connection signal="focus_exited" from="Menu/ButtonContinue" to="." method="_on_button_continue_focus_exited"]
[connection signal="pressed" from="Menu/ButtonContinue" to="." method="_on_button_continue_pressed"]
[connection signal="focus_entered" from="Menu/ButtonNew" to="." method="_on_button_new_focus_entered"]
[connection signal="focus_exited" from="Menu/ButtonNew" to="." method="_on_button_new_focus_exited"]
[connection signal="pressed" from="Menu/ButtonNew" to="." method="_on_button_new_pressed"]
[connection signal="focus_entered" from="Menu/ButtonSettings" to="." method="_on_button_settings_focus_entered"]
[connection signal="focus_exited" from="Menu/ButtonSettings" to="." method="_on_button_settings_focus_exited"]
[connection signal="pressed" from="Menu/ButtonSettings" to="." method="_on_button_settings_pressed"]
[connection signal="focus_entered" from="Menu/ButtonController" to="." method="_on_button_controller_focus_entered"]
[connection signal="focus_exited" from="Menu/ButtonController" to="." method="_on_button_controller_focus_exited"]
[connection signal="pressed" from="Menu/ButtonController" to="." method="_on_button_controller_pressed"]
[connection signal="focus_entered" from="Menu/ButtonQuit" to="." method="_on_button_quit_focus_entered"]
[connection signal="focus_exited" from="Menu/ButtonQuit" to="." method="_on_button_quit_focus_exited"]
[connection signal="pressed" from="Menu/ButtonQuit" to="." method="_on_button_quit_pressed"]
